--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-body{
+body {
   overflow-y: scroll;
   overflow-x: hidden;
-
 }
-:root , body , html{
-  background-color:#f5f5f5 ;
+:root,
+body,
+html {
+  background-color: #f5f5f5;
   box-sizing: border-box;
-
 }
 div,
 h1,
@@ -38,6 +38,14 @@ ul {
 body {
   font-family: Arial, sans-serif;
 }
-a:hover{
+a:hover {
   cursor: pointer;
+}
+@keyframes fadeIn {
+  form {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
